--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -1,13 +1,14 @@
 {
   "name": "package-a",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "transpile": "vue-cli-service build --target lib --dest ./lib",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "publish": "npm publish --registry http://localhost:4873"
   },
   "dependencies": {
     "core-js": "^3.4.4",
@@ -26,5 +27,6 @@
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "main": "./lib/package-b.common.js"
 }
