--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "package-b",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "transpile": "vue-cli-service build --target lib --dest ./lib",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "publish": "npm publish --registry http://localhost:4873"
   },
   "dependencies": {
     "core-js": "^3.4.4",
