--- a/packages/package-a/package.json
+++ b/packages/package-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-a",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
